tests/typing/fail/0025-no-pvar-in-op-body.ec
type t.

module X = {
  var x : t
}.

op fail : t = X.x.
